chore(i18n): update translations (#1336)

--- a/i18n/fi-FI.properties
+++ b/i18n/fi-FI.properties
@@ -223,7 +223,7 @@ be.previousSegment = Edellinen osa
 # Label for print action
 be.print = Tulosta
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = Aiempi yhteistyökumppani
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Viimeisimmät
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = Vaihda
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Ladannut palveluun {name}
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = Versio {versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = Valmis
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Tehtävän hyväksymisen aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = Tehtävän yhteistyökumppanien lataamisessa tapahtui virhe. Yritä uudelleen.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Tehtävän viimeistelyn aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = Hylkää
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Tehtävän hylkäämisen aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = Näytä vähemmän
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = Näytä {additionalAssigneeCount} enemmän
 # label for button that opens task popup
 be.tasks.addTask = Lisää tehtävä
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = Kohteen {itemName} käyttäjät
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Käyttöoikeus päättyy {date}. Lisätietoja napsauttamalla.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = Virhe! Voit kerrallaan lisätä enintään {maxContacts} yhteistyökumppania. Yritä uudelleen lähettämällä kutsut erissä.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Tämä sisältö jaetaan ulkoisille yhteistyökumppaneille.
 # Text used in button label to describe permission level - co-owner
