--- a/i18n/hi-IN.properties
+++ b/i18n/hi-IN.properties
@@ -223,7 +223,7 @@ be.previousSegment = पिछला खंड
 # Label for print action
 be.print = प्रिंट करें
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = एक पूर्व सहयोगी
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = हाल ही के
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = टॉगल करें
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = {name} ने अपलोड किया
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = वर्ज़न {versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = पूरा करें
 # Error message when approving a task fails
 be.taskApproveErrorMessage = कार्य अनुमोदित करने के दौरान एक त्रुटि हुई. कृपया पेज रीफ़्रेश करें और फिर से कोशिश करें.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = इस कार्य के लिए सहयोगियों को लोड करने के दौरान कोई त्रुटि उत्पन्न हुई. कृपया फिर से प्रयास करें.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = कार्य पूरा करने के दौरान एक त्रुटि हुई. कृपया पेज रीफ़्रेश करें और फिर से कोशिश करें.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = अस्वीकृत करें
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = कार्य अस्वीकार करने के दौरान एक त्रुटि हुई. कृपया पेज रीफ़्रेश करें और फिर से कोशिश करें.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = कम दिखाएँ
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = अधिक {additionalAssigneeCount} दिखाएँ
 # label for button that opens task popup
 be.tasks.addTask = कार्य जोड़ें
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = '{itemName}' के लोग
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = एक्सेस की समय सीमा {date} पर समाप्त होती है. विवरण के लिए क्लिक करें.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = ओह! एक बार में जोड़े जा सकने वाले सहयोगियों की अधिकतम संख्या {maxContacts} है. अपने आमंत्रणों को बैच में विभाजित करके फिर से प्रयास करें.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = यह सामग्री बाहरी सहयोगियों के साथ शेयर की जाएगी.
 # Text used in button label to describe permission level - co-owner
