--- a/i18n/ja-JP.properties
+++ b/i18n/ja-JP.properties
@@ -223,7 +223,7 @@ be.previousSegment = 前のセグメント
 # Label for print action
 be.print = 印刷
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = 元コラボレータ
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = 履歴
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = 切り替え
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = {name}がアップロードしました
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = 完了
 # Error message when approving a task fails
 be.taskApproveErrorMessage = このタスクの承認中にエラーが発生しました。ページを更新して、もう一度やり直してください。
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = このタスクのコラボレータの読み込み中にエラーが発生しました。もう一度やり直してください。
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = このタスクの完了中にエラーが発生しました。ページを更新して、もう一度やり直してください。
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = 拒否
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = このタスクの拒否中にエラーが発生しました。ページを更新して、もう一度やり直してください。
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = 表示を減らす
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = 次の{additionalAssigneeCount}人を表示
 # label for button that opens task popup
 be.tasks.addTask = タスクを追加
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = ‘{itemName}'のユーザー
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = アクセス権限の有効期限が{date}に切れます。詳細についてはクリックしてください。
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = 一度に追加できるコラボレータは最大{maxContacts}人までです。招待をバッチに分割して、もう一度やり直してください。
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = このコンテンツは外部コラボレータと共有されます。
 # Text used in button label to describe permission level - co-owner
