--- a/i18n/ko-KR.properties
+++ b/i18n/ko-KR.properties
@@ -223,7 +223,7 @@ be.previousSegment = 이전 세그먼트
 # Label for print action
 be.print = 인쇄
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = 이전 공동 작업자
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = 최근 항목
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = 전환
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = 업로드한 사용자: {name}
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = 완료
 # Error message when approving a task fails
 be.taskApproveErrorMessage = 이 작업을 승인하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = 이 작업에 대한 공동 작업자를 로드하는 중 오류가 발생했습니다. 다시 시도하십시오.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = 이 작업을 완료하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = 거부
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = 이 작업을 거부하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = 간단히 표시
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = {additionalAssigneeCount}명 더 표시
 # label for button that opens task popup
 be.tasks.addTask = 작업 추가
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = '{itemName}' 내 사용자
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = {date}에 액세스가 만료됩니다. 자세한 사항을 확인하려면 클릭하십시오.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = 한 번에 추가할 수 있는 최대 공동 작업자 수는 {maxContacts}명입니다. 초대장을 일괄로 분할하여 다시 시도하십시오.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = 이 콘텐츠는 외부 공동 작업자와 공유됩니다.
 # Text used in button label to describe permission level - co-owner
