--- a/i18n/nb-NO.properties
+++ b/i18n/nb-NO.properties
@@ -223,7 +223,7 @@ be.previousSegment = Forrige segment
 # Label for print action
 be.print = Skriv ut
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = En tidligere bidragsyter
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Nylige
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = Aktiver/deaktiver
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Lastet opp av {name}
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = Versjon {versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = Fullfør
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Det oppsto en feil ved godkjenningen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = Det oppsto en feil under lasting av samarbeidspartnere for denne oppgaven. Prøv igjen.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Det oppsto en feil ved gjennomføringen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = Avslå
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Det oppsto en feil ved avvisningen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = Vis mindre
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = Vis {additionalAssigneeCount} mer
 # label for button that opens task popup
 be.tasks.addTask = Legg til oppgave
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = Personer i {itemName}
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Tilgangen utløper {date}. Klikk her for å få mer informasjon.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = Det maksimale antallet samarbeidspartnere som kan legges til samtidig, er {maxContacts} samarbeidspartnere. Prøv på nytt ved å dele invitasjonene inn i grupper.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Dette innholdet deles med eksterne samarbeidspartnere.
 # Text used in button label to describe permission level - co-owner
