--- a/i18n/pt-BR.properties
+++ b/i18n/pt-BR.properties
@@ -223,7 +223,7 @@ be.previousSegment = Segmento anterior
 # Label for print action
 be.print = Imprimir
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = Um ex-colaborador
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Recentes
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = Alternar
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Carregada por {name}
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = Concluir
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Ocorreu um erro ao aprovar esta tarefa. Atualize a página e tente novamente.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = Ocorreu um erro ao carregar colaboradores para esta tarefa. Tente novamente.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Ocorreu um erro ao completar esta tarefa. Atualize a página e tente novamente.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = Recusar
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Ocorreu um erro ao rejeitar esta tarefa. Atualize a página e tente novamente.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = Mostrar menos
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = Mostrar mais {additionalAssigneeCount}
 # label for button that opens task popup
 be.tasks.addTask = Adicionar tarefa
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = Pessoas em '{itemName}'
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = O acesso expira em {date}. Clique para mais detalhes.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = Opa! O número máximo de colaboradores que podem ser adicionados de uma vez é {maxContacts}. Tente novamente dividindo seus convites em lotes.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Este conteúdo será compartilhado com colaboradores externos.
 # Text used in button label to describe permission level - co-owner
