--- a/i18n/zh-TW.properties
+++ b/i18n/zh-TW.properties
@@ -223,7 +223,7 @@ be.previousSegment = 上一個區段
 # Label for print action
 be.print = 列印
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = 前共同作業者
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = 最近項目
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = 切換
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = 已由 {name} 上傳
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = 完成
 # Error message when approving a task fails
 be.taskApproveErrorMessage = 核准此工作時發生錯誤。請重新整理頁面並再試一次。
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = 為此工作載入共同作業者時發生錯誤，請再試一次。
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = 完成此工作時發生錯誤。請重新整理頁面並再試一次。
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = 拒絕
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = 拒絕此工作時發生錯誤。請重新整理頁面並再試一次。
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = 顯示較少
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = 顯示其他 {additionalAssigneeCount} 人
 # label for button that opens task popup
 be.tasks.addTask = 新增工作
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = 「{itemName}」中的人員
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = 存取權限將於 {date} 到期。按一下以取得詳細資料。
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = 糟糕！一次最多只能新增 {maxContacts} 個共同作業者。請分批邀請並再試一次。
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = 此內容將與外部共同作業者共用。
 # Text used in button label to describe permission level - co-owner
