--- a/i18n/da-DK.properties
+++ b/i18n/da-DK.properties
@@ -223,7 +223,7 @@ be.previousSegment = Forrige segment
 # Label for print action
 be.print = Udskriv
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = En tidligere samarbejdspartner
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Seneste
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = Skift
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Uploadet af {name}
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = Fuldfør
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Der opstod en fejl under godkendelse af denne opgave. Opdater siden, og prøv igen.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = Der opstod en fejl under indlæsning af samarbejdspartnere. Prøv igen.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Der opstod en fejl under fuldførelse af denne opgave. Opdater siden, og prøv igen.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = Afvis
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Der opstod en fejl under afvisningen af denne opgave. Opdater siden, og prøv igen.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = Vis mindre
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = Vis {additionalAssigneeCount} flere
 # label for button that opens task popup
 be.tasks.addTask = Tilføj opgave
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = Personer i '{itemName}'
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Adgang udløber d. {date}. Klik for at se detaljer.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = Hovsa! Det maksimale antal samarbejdspartnere, der kan tilføjes på én gang, er {maxContacts} samarbejdspartnere. Prøv igen ved at opdele dine invitationer i grupper.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Dette indhold bliver delt med eksterne samarbejdspartnere.
 # Text used in button label to describe permission level - co-owner
