--- a/i18n/de-DE.properties
+++ b/i18n/de-DE.properties
@@ -223,7 +223,7 @@ be.previousSegment = Vorheriges Segment
 # Label for print action
 be.print = Drucken
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = Ein ehemaliger Mitarbeiter
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Zuletzt verwendete
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = Umschalten
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Von {name} hochgeladen
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = Abschließen
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Beim Genehmigen der Aufgabe ist ein Fehler aufgetreten. Aktualisieren Sie die Seite und versuchen Sie es erneut.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = Beim Laden der Mitarbeiter für diese Aufgabe ist ein Fehler aufgetreten. Versuchen Sie es erneut.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Beim Abschließen der Aufgabe ist ein Fehler aufgetreten. Aktualisieren Sie die Seite und versuchen Sie es erneut.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = Ablehnen
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Beim Ablehnen der Aufgabe ist ein Fehler aufgetreten. Aktualisieren Sie die Seite und versuchen Sie es erneut.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = Weniger anzeigen
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = {additionalAssigneeCount} weitere anzeigen
 # label for button that opens task popup
 be.tasks.addTask = Aufgabe hinzufügen
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = Personen in „{itemName}“
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Zugriff läuft am {date} ab. Klicken Sie, um weitere Einzelheiten zu erhalten.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = Hoppla! Die maximale Anzahl an Mitarbeitern, die gleichzeitig hinzugefügt werden können, beträgt {maxContacts} Mitarbeiter. Versuchen Sie es erneut, indem Sie Ihre Einladungen in Stapel aufteilen.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Dieser Inhalt wird für externe Mitarbeiter freigegeben.
 # Text used in button label to describe permission level - co-owner
