--- a/i18n/es-419.properties
+++ b/i18n/es-419.properties
@@ -223,7 +223,7 @@ be.previousSegment = Segmento anterior
 # Label for print action
 be.print = Imprimir
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = Un colaborador anterior
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Recientes
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = Alternar
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Cargada por {name}
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = Versión {versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = Completar
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Se ha producido un error al aprobar esta tarea. Actualice la página e inténtelo de nuevo.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = Se ha producido un error al cargar los colaboradores para esta tarea. Inténtelo de nuevo.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Se ha producido un error al completar esta tarea. Actualice la página e inténtelo de nuevo.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = Rechazar
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Se ha producido un error al rechazar esta tarea. Actualice la página e inténtelo de nuevo.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = Mostrar menos
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = Mostrar {additionalAssigneeCount} más
 # label for button that opens task popup
 be.tasks.addTask = Agregar tarea
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = Personas en '{itemName}'
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = El acceso caduca el {date}. Haga clic para obtener información.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = Vaya, solo se pueden agregar {maxContacts} colaboradores como máximo de una vez. Divida las invitaciones en lotes e inténtelo de nuevo.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Este contenido se compartirá con colaboradores externos.
 # Text used in button label to describe permission level - co-owner
