--- a/i18n/fr-FR.properties
+++ b/i18n/fr-FR.properties
@@ -223,7 +223,7 @@ be.previousSegment = Segment précédent
 # Label for print action
 be.print = Imprimer
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = Un ancien collaborateur
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Récents
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = Basculer
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Chargée par {name}
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = Terminé
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Une erreur s'est produite lors de l'approbation de cette tâche. Veuillez actualiser la page et réessayer.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = Une erreur s'est produite lors du chargement des collaborateurs pour cette tâche. Veuillez réessayer.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Une erreur s'est produite lors de la finalisation de cette tâche. Veuillez actualiser la page et réessayer.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = Refuser
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Une erreur s'est produite lors du refus de cette tâche. Veuillez actualiser la page et réessayer.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = Afficher moins
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = Afficher {additionalAssigneeCount} de plus
 # label for button that opens task popup
 be.tasks.addTask = Ajouter une tâche
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = Utilisateurs dans « {itemName} »
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Date d'expiration de l'accès : {date}. Cliquez pour plus d'informations.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = Oups ! Le nombre maximal de collaborateurs pouvant être ajoutés en même temps est de {maxContacts} collaborateurs. Veuillez réessayer en divisant vos invitations en plusieurs lots.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Ce contenu sera partagé avec des collaborateurs externes.
 # Text used in button label to describe permission level - co-owner
