--- a/i18n/it-IT.properties
+++ b/i18n/it-IT.properties
@@ -223,7 +223,7 @@ be.previousSegment = Segmento precedente
 # Label for print action
 be.print = Stampa
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = Un ex collaboratore
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Recenti
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = Cambia
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Caricata da {name}
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = Completa
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Si è verificato un errore durante l'approvazione dell'attività. Aggiorna la pagina e riprova.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = Si è verificato un errore durante il caricamento dei collaboratori per questa attività. Riprova.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Si è verificato un errore durante il completamento dell'attività. Aggiorna la pagina e riprova.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = Rifiuta
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Si è verificato un errore durante il rifiuto dell'attività. Aggiorna la pagina e riprova.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = Mostra meno
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = Mostra altri {additionalAssigneeCount}
 # label for button that opens task popup
 be.tasks.addTask = Aggiungi attività
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = Persone in "{itemName}"
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = L'accesso scade in data {date}. Fai clic per i dettagli.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = Errore. È possibile aggiungere al massimo {maxContacts} collaboratori contemporaneamente. Riprova dividendo gli inviti in gruppi.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Questo contenuto sarà condiviso con i collaboratori esterni.
 # Text used in button label to describe permission level - co-owner
