--- a/i18n/nl-NL.properties
+++ b/i18n/nl-NL.properties
@@ -223,7 +223,7 @@ be.previousSegment = Vorige segment
 # Label for print action
 be.print = Afdrukken
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = Een eerdere medebewerker
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Recente bestanden
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = In-/uitschakelen
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Geüpload door {name}
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = Voltooien
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Er is een fout opgetreden tijdens het goedkeuren van deze taak. Vernieuw de pagina en probeer het opnieuw.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = Er is een fout opgetreden tijdens het laden van medebewerkers van deze taak. Probeer het opnieuw.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Er is een fout opgetreden tijdens het voltooien van deze taak. Vernieuw de pagina en probeer het opnieuw.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = Weigeren
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Er is een fout opgetreden tijdens het afwijzen van deze taak. Vernieuw de pagina en probeer het opnieuw.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = Minder weergeven
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = {additionalAssigneeCount} meer weergeven
 # label for button that opens task popup
 be.tasks.addTask = Taak toevoegen
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = Personen in "{itemName}"
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Toegang verloopt op {date}. Klik voor details.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = Oeps! Het maximumaantal medebewerkers dat tegelijkertijd kan worden toegevoegd is {maxContacts} medebewerkers. Probeer het opnieuw door uw uitnodigingen in batches te splitsen.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Deze inhoud zal worden gedeeld met externe medebewerkers.
 # Text used in button label to describe permission level - co-owner
