--- a/i18n/pl-PL.properties
+++ b/i18n/pl-PL.properties
@@ -223,7 +223,7 @@ be.previousSegment = Poprzedni segment
 # Label for print action
 be.print = Drukuj
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = Wcześniejszy współpracownik
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Ostatnie
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = Przełączanie
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Przekazane przez użytkownika {name}
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = Wersja {versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = Gotowe
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Podczas zatwierdzania tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = Podczas wczytywania współpracowników wystąpił błąd. Spróbuj ponownie.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Podczas kończenia tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = Odrzuć
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Podczas odrzucania tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = Pokaż mniej
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = Pokaż {additionalAssigneeCount} więcej
 # label for button that opens task popup
 be.tasks.addTask = Dodaj zadanie
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = Osoby w „{itemName}”
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Dostęp wygasa {date}. Kliknij tutaj, aby uzyskać szczegółowe informacje.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = Maksymalna liczba współpracowników, których można dodać jednocześnie, wynosi {maxContacts}. Spróbuj ponownie, dzieląc zaproszenia na pakiety.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Ta zawartość zostanie udostępniona zewnętrznym współpracownikom.
 # Text used in button label to describe permission level - co-owner
