--- a/i18n/ru-RU.properties
+++ b/i18n/ru-RU.properties
@@ -223,7 +223,7 @@ be.previousSegment = Предыдущий сегмент
 # Label for print action
 be.print = Печать
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = Прежний соавтор
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Последние
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = Переключение
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = Загружено пользователем {name}
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = Версия {versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = Завершить
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Ошибка при утверждении этой задачи. Обновите страницу и повторите попытку.
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = Ошибка при загрузке соавторов для этой задачи. Повторите попытку.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Ошибка при выполнении этой задачи. Обновите страницу и повторите попытку.
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = Отклонить
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Ошибка при отклонении этой задачи. Обновите страницу и повторите попытку.
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = Скрыть
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = Показать еще {additionalAssigneeCount}
 # label for button that opens task popup
 be.tasks.addTask = Добавить задачу
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = Пользователи {itemName}
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Срок действия доступа истекает {date}. Нажмите, чтобы получить дополнительную информацию.
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = Ошибка. Максимальное количество соавторов, которое можно добавить за один раз: {maxContacts}. Повторите попытку, разделив приглашения на несколько пакетов.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Доступ к этому контенту будет предоставлен внешним соавторам.
 # Text used in button label to describe permission level - co-owner
