--- a/i18n/zh-CN.properties
+++ b/i18n/zh-CN.properties
@@ -223,7 +223,7 @@ be.previousSegment = 上一段
 # Label for print action
 be.print = 打印
 # If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
-be.priorCollaborator = A Prior Collaborator
+be.priorCollaborator = 先前的协作者
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = 最近项目
 # Message shown when there are no recent items.
@@ -340,6 +340,8 @@ be.sidebarVersions.today = Today
 be.sidebarVersions.toggle = 切换
 # Message displayed for an uploaded version. {name} is the user who performed the action.
 be.sidebarVersions.uploadedBy = 由 {name} 上传
+# Text displayed if a version exceeds the user's maximum allowed version count
+be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
 be.sidebarVersions.versionNumberBadge = V{versionNumber}
 # Label given to the version badge for screen readers.
@@ -377,7 +379,7 @@ be.taskApprove = 完成
 # Error message when approving a task fails
 be.taskApproveErrorMessage = 批准此任务时出现错误。请刷新页面并重试。
 # Error message when we failed to load the collaborators when user tries to edit a task
-be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
+be.taskCollaboratorLoadErrorMessage = 为此任务加载协作者时出错。请重试。
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = 完成此任务时出现错误。请刷新页面并重试。
 # Error message when a task creation fails
@@ -401,9 +403,9 @@ be.taskReject = 拒绝
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = 拒绝此任务时出现错误。请刷新页面并重试。
 # Button name to hide task assignee list
-be.taskShowLessAssignees = Show Less
+be.taskShowLessAssignees = 显示较少
 # Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
-be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
+be.taskShowMoreAssignees = 显示其他 {additionalAssigneeCount} 个
 # label for button that opens task popup
 be.tasks.addTask = 添加任务
 # label for menu item that opens approval task popup
@@ -1179,7 +1181,7 @@ boxui.unifiedShare.collaboratorListTitle = “{itemName}”中的人员
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = 访问权限将于 {date} 过期。单击了解详细信息。
 # Error message when more than the maximum number of contacts is entered
-boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
+boxui.unifiedShare.contactsExceedLimitError = 糟糕！可以一次添加的最大协作者数量是 {maxContacts} 个协作者。请将您的邀请拆分成多个批次，然后重试。
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = 此内容将与外部协作者进行共享。
 # Text used in button label to describe permission level - co-owner
