chore(i18n): update translations (#1340)

--- a/i18n/ja-JP.properties
+++ b/i18n/ja-JP.properties
@@ -315,7 +315,7 @@ be.sidebarVersions.current = 現在のバージョン
 # Label for the version delete action.
 be.sidebarVersions.delete = 削除
 # Message displayed for a deleted version. {name} is the user who performed the action.
-be.sidebarVersions.deletedBy = {name}が削除しました
+be.sidebarVersions.deletedBy = 削除: {name}
 # Label for the version download action.
 be.sidebarVersions.download = ダウンロード
 # Message to display when no versions are available
@@ -329,7 +329,7 @@ be.sidebarVersions.promote = 現在のバージョンとして設定
 # Label for the version restore action.
 be.sidebarVersions.restore = 復元
 # Message displayed for a restored version. {name} is the user who performed the action.
-be.sidebarVersions.restoredBy = {name}が復元しました
+be.sidebarVersions.restoredBy = 復元: {name}
 # Header to display for group of versions created in the current month
 be.sidebarVersions.thisMonth = This Month
 # Title for the preview versions sidebar
@@ -339,7 +339,7 @@ be.sidebarVersions.today = Today
 # Label for the version actions dropdown menu toggle button.
 be.sidebarVersions.toggle = 切り替え
 # Message displayed for an uploaded version. {name} is the user who performed the action.
-be.sidebarVersions.uploadedBy = {name}がアップロードしました
+be.sidebarVersions.uploadedBy = アップロード: {name}
 # Text displayed if a version exceeds the user's maximum allowed version count
 be.sidebarVersions.versionLimitExceeded = You are limited to the last {versionLimit, number} {versionLimit, plural, one {version} other {versions}}.
 # Text to display in the version badge.
